--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -73,6 +73,7 @@
                 android:layout_weight="1">
 
                 <TextView
+                    android:id="@+id/txtValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Giá trị:"
